Add LinkedIn profile

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
                                 https://github.com/herrecito
                             </a>
                         </li>
+                        <li>
+                            <a
+                                class="text-blue-900 font-bold"
+                                href="https://www.linkedin.com/in/ruben-herrero-rabadan/"
+                                rel="noreferrer noopener"
+                                target="_blank"
+                            >
+                                https://www.linkedin.com/in/ruben-herrero-rabadan/
+                            </a>
+                        </li>
                     </ul>
                     <div class="print:invisible">
                         <a
